# PySQL

./: .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.bat  intall.sh  main.py  main_c.py  pyproject.toml  requirements.txt  run.sh  setup.bat  setup.py  setup.sh
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: codecov.yml  codeql-analysis.yml  greetings.yml  python-package.yml  python-publish.yml
data/: info.py
pysql/: README.md  __init__.py  main.py  main_c.py
pysql/data/: export.py  imports.py  info.py  update.py
pysql/utils/: exceptions.py  update.py  user.py
src/: import_db.sql  import_tb.sql  test.csv
tests/: template.py  travis.sql
tests/data/: test_export.py  test_imports.py
tests/utils/: test_user.py
