[tool.poetry]
name = "PySQL"
version = "0.1.0"
description = "GUI for maintaining MySQL databases"
authors = ["Devansh3712 <devanshamity@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mysql-connector-python = "^8.0.23"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
