[tool.poetry]
name = "PySQL"
version = "1.0.7"
description = "GUI & Python wrapper for making MySQL queries easier"
authors = ["Devansh3712 <devanshamity@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mysql-connector-python = "^8.0.23"
tabulate = "^0.8.9"
colorama = "^0.4.4"
stdiomask = "^0.0.6"
mysql-connector = "^2.2.9"
urllib3 = "^1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
